Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/reportLab/report_investigation_summery_by_date_inward_opd.xhtml
+++ b/src/main/webapp/reportLab/report_investigation_summery_by_date_inward_opd.xhtml
@@ -119,6 +119,11 @@
                         </p:outputLabel>
                     </p:column>
                     <p:column >
+                        <p:outputLabel value="#{b.discount}">
+                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column >
                         <p:outputLabel value="#{b.netTotal}">
                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                         </p:outputLabel>
@@ -134,6 +139,11 @@
                         </p:outputLabel>
                     </p:column>
                     <p:column >
+                        <p:outputLabel value="#{b.discount}">
+                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column >
                         <p:outputLabel value="#{b.netTotal}">
                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                         </p:outputLabel>
@@ -146,6 +156,11 @@
                     </p:column>
                     <p:column >
                         <p:outputLabel value="#{b.deptId}">
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column >
+                        <p:outputLabel value="#{b.discount}">
+                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                         </p:outputLabel>
                     </p:column>
                     <p:column >
