--- a/src/main/webapp/channel/channel_report_agent_history_1.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_history_1.xhtml
@@ -85,7 +85,7 @@
                                 </p:outputLabel>
                             </f:facet>
                             <p:column>
-                                <p:outputLabel value="#{a.bill.insId} - #{a.bill.deptId}" >
+                                <p:outputLabel value="#{a.bill.insId}" >
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
