Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/common/manage_item_fees.xhtml
+++ b/src/main/webapp/common/manage_item_fees.xhtml
@@ -170,6 +170,10 @@
                                             </td>
 
                                             <td>
+                                                <h:outputLabel id="txtFeeType1" value="#{f.id}" >
+                                                </h:outputLabel>
+                                            </td>
+                                            <td>
                                                 <h:outputLabel id="txtFeeType" value="#{f.feeType.label}" >
                                                 </h:outputLabel>
                                             </td>
