--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -11,6 +11,7 @@
                 xmlns:poue="http://primefaces.org/ui/extensions">
 
     <ui:define name="content">
+       
 
         <h:form id="form">
 
@@ -270,7 +271,7 @@
                                     var keycode = (event.keyCode ? event.keyCode : event.which);
                                     alert("sdf");
                                     if (keycode == '13') {
-                                    document.getElementById("form:txtSearch3").focus();
+                                    document.getElementById("form:txthh3").focus();
                                     return false;
                                     }
 
@@ -446,7 +447,7 @@
                                             value="#{channelBillController.searchPatient}" 
                                             completeMethod="#{patientController.completePatientByNameOrCode}" 
                                             var="apt" itemLabel="#{apt.person.name}" 
-                                            itemValue="#{apt}" size="30"  styleClass="mediuminput">
+                                            itemValue="#{apt}" size="30"  styleClass="mediuminput" required="true" requiredMessage="Please enter patient" onkeypress="if (event.keyCode == 10) {return false; }">
                                 <p:column headerText="Name">
                                     <h:outputLabel value="#{apt.person.nameWithTitle}" />
                                 </p:column>
@@ -496,18 +497,21 @@
                                            update="gpThisBookingDetails" style="float: right;" 
                                            action="#{channelBillController.add}" 
                                            oncomplete="PF('dlgAdd').show();">   
+                            <p:defaultCommand target="btnAdd"/>
                             <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
                         </p:commandButton>
+
                         <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
                             <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
                             <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                        </p:confirmDialog>
 
+                        </p:confirmDialog>
                         <p:commandButton  action="#{channelBillController.clearAll}"  value="New Booking" ajax="false"/>
                     </h:panelGrid>
 
                     <p:dialog id="dialogChannelAdded" header="Booked" widgetVar="dlgAdd" 
                               modal="true" height="400" width="600" closable="false">
+
                         <p:commandButton value="New Bill" action="#{channelBillController.clearAll}" ajax="false"
                                          ></p:commandButton>
 
