--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -197,7 +197,7 @@
                                                                 completeMethod="#{patientController.completePatientByNameOrCode}" 
                                                                 var="apt" itemLabel="#{apt.person.name}" 
                                                                 itemValue="#{apt}" size="30"  style="width: 400px;"
-                                                                minQueryLength="4">
+                                                                minQueryLength="4" required="true" requiredMessage="please select the Patient">
 
 
                                                     <p:column headerText="Name">
