--- a/src/main/webapp/opd_bill_package.xhtml
+++ b/src/main/webapp/opd_bill_package.xhtml
@@ -44,10 +44,11 @@
                                     <pa:slip paymentMethodData="#{billPackageController.paymentMethodData}"/>
                                 </h:panelGroup>
 
-                                <p:commandButton  value="Settle" action="#{billPackageController.settleBill}" ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;">
+                                <p:commandButton value="Settle" action="#{billPackageController.settleBill}" ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;">
                                 </p:commandButton>
                                 <p:commandButton value="New Bill" ajax="false" action="opd_bill_package" actionListener="#{billPackageController.prepareNewBill()}" >
                                 </p:commandButton>
+                                <p:defaultCommand target="btnAddIx" />
                             </h:panelGrid>
                         </f:facet>
 
@@ -70,8 +71,8 @@
                                                                 value="#{billPackageController.searchedPatient}" 
                                                                 completeMethod="#{patientController.completePatient}" 
                                                                 var="apt" itemLabel="#{apt.person.name}" 
-                                                                itemValue="#{apt}" size="30"  style="width: 400px;">
-                                                    <p:ajax event="itemSelect" process="acPt" update="panSearch"/>
+                                                                itemValue="#{apt}" size="30"  style="width: 400px;" required="true" requiredMessage="Please select the Patient">
+                                                    <f:ajax event="itemSelect" execute="acPt" render="panSearch" />
                                                 </p:autoComplete>   
 
                                                 <h:panelGrid id="panSearch" columns="2" >
@@ -100,7 +101,8 @@
 
 
                                     <p:panel id='pIxAdd' header="Items Requests" style="min-height: 350px;"  >                                        
-                                        <p:autoComplete widgetVar="aIx" id="acIx" forceSelection="true" value="#{billPackageController.currentBillItem.item}" completeMethod="#{itemController.completePackage}" var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
+                                        <p:autoComplete widgetVar="aIx" id="acIx" forceSelection="true" value="#{billPackageController.currentBillItem.item}" completeMethod="#{itemController.completePackage}" var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30"  style="width: 400px;" 
+                                                        required="true" requiredMessage="Please add item">
                                             <p:column>
                                                 #{ix.name}
                                             </p:column>
