SMS,Store Vat Report Ruhunu Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/store/store_summery_index.xhtml
+++ b/src/main/webapp/store/store_summery_index.xhtml
@@ -25,6 +25,7 @@
                                 <p:panel header="4) GRN " style="width: 400px; height: auto" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" ajax="false" value="GRN Summary" action="store_report_grn_detail" actionListener="#{storeSaleReport.makeNull}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="GRN Expenses" action="store_report_grn_detail_expencess" actionListener="#{storeSaleReport.makeNull}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="GRN Summary By Supplier" action="store_report_grn_detail_by_supplier" actionListener="#{storeSaleReport.makeNull}"/>
                                     </h:panelGrid>
                                 </p:panel>
