--- a/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
@@ -15,7 +15,7 @@
 
             <p:panel>
                 <f:facet name="header" >                
-                     <h:outputLabel value="Summary By Service Category"/>
+                    <h:outputLabel value="Summary By Service Category"/>
                     <h:panelGrid columns="2" styleClass="noPrintButton">
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{serviceSummery.fromDate}" navigator="true"  pattern="dd MMMM yyyy  HH:mm:ss" >
@@ -96,10 +96,11 @@
                     </f:facet>
                     <p:outputLabel value="#{d.billItem.item.name}" />
                 </p:column>
-                
-                <p:column headerText="Doctor Name">
+
+
+                <p:column headerText="Doctor Fee">
                     <f:facet name="header">
-                        <h:outputLabel value="Doctor Name" />
+                        <h:outputLabel value="Doctor Fee" />
                     </f:facet>
                     <p:outputLabel value="#{d.staffsNames}" />
                 </p:column>
@@ -112,7 +113,7 @@
                         <f:convertNumber pattern="#,##0.00"/>
                     </p:outputLabel>
                 </p:column>     
-                
+
                 <p:column headerText="Vat Fee" style="text-align: right;">
                     <f:facet name="header">
                         <h:outputLabel value="Vat Fee" />
